src/test/ui/parser/variadic-ffi-3.rs
// compile-flags: -Z parse-only

fn foo(x: isize, ...) {
    //~^ ERROR: only foreign functions are allowed to be variadic
}

fn main() {}
